Style: fixed font not working on IE.

--- a/src/scss/main/_typography.scss
+++ b/src/scss/main/_typography.scss
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: Norwester;
-    src: url(/assets/fonts/norwester.otf);
+    src: url(/assets/fonts/norwester.woff) format('woff');
 }
 
 @font-face {
